--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="container">
+        <div class="header"></div>
+        <div class="middle">
+            <div class="random"></div>
+            <div class="testimonial"></div>
+        </div>
+        <div class="footer"></div>
+    </div>
     
 </body>
 </html>
