--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 <body>
 
     <div class="container">
-        <div class="header"></div>
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <ul>
+                <li><a href="">Header Link One</a></li>
+                <li><a href="">Header Link Two</a></li>
+                <li><a href="">Header Link Three</a></li>
+            </ul>
+        </div>
+        <div class="top"></div>
         <div class="middle">
             <div class="random"></div>
             <div class="testimonial"></div>
         </div>
         <div class="footer"></div>
     </div>
-    
+
 </body>
 </html>
 
