--- a/index.html
+++ b/index.html
@@ -17,12 +17,39 @@
                 <li><a href="">Header Link Three</a></li>
             </ul>
         </div>
-        <div class="top"></div>
-        <div class="middle">
-            <div class="random"></div>
-            <div class="testimonial"></div>
+        <div class="top">
+            <div class="description">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes under the main title. It is smaller font and the color is lower contrast</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="image">
+                <img src="" alt="">
+            </div>
         </div>
-        <div class="footer"></div>
+        <div class="middle">
+            <div class="random">
+                <h1>Some Random content</h1>
+                <ul>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                </ul>
+            </div>
+            <div class="testimonial">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space or maybe someone will read it.
+                    Who knows? All I know is that it looks nice. 
+                </p>
+                <h3>- Thor, god of thunder</h3>
+            </div>
+            <div class="sign-up">
+                
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
     </div>
 
 </body>
