--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -44,11 +45,17 @@
                 <h3>- Thor, god of thunder</h3>
             </div>
             <div class="sign-up">
-                
+                <div class="action">
+                    <h3>Call to action!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="sign-up button">
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
         <div class="footer">
-
+            Copyright "c" The Odin Project
         </div>
     </div>
 
