--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             </div>
             <div class="sign-up">
                 <div class="action">
-                    <h3>Call to action!</h3>
-                    <p>Sign up for our product by clicking that button right over there!</p>
-                </div>
-                <div class="sign-up button">
+                    <div class="action-text">
+                        <h3>Call to action!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
                     <button>Sign up</button>
                 </div>
             </div>
